# ISLP_labs

./: Ch02-statlearn-lab.md  Ch03-linreg-lab.md  Ch03-linreg-lab.org  Ch04-classification-lab.md  Ch05-resample-lab.md  Ch06-varselect-lab.md  Ch07-nonlin-lab.md  Ch08-baggboost-lab.md  Ch08-baggboost-lab.org  Ch09-svm-lab.md  Ch10-deeplearning-lab.md  Ch11-surv-lab.md  Ch12-unsup-lab.md  Ch13-multiple-lab.md  ch08.py  pyproject.toml
